# FacetedVisualizer

./: CMakeLists.txt  README.md  qSlicerFacetedVisualizerModule.cxx  qSlicerFacetedVisualizerModule.h  qSlicerFacetedVisualizerModuleWidget.cxx  qSlicerFacetedVisualizerModuleWidget.h
Logic/: CMakeLists.txt  vtkSlicerFacetedVisualizerLogic.cxx  vtkSlicerFacetedVisualizerLogic.h
Resources/: qSlicerFacetedVisualizerModule.qrc.depends
Resources/UI/: qSlicerFacetedVisualizerModule.ui
Testing/Cxx/: CMakeLists.txt
